--- a/Broome_Taylor_Project 1/index.html
+++ b/Broome_Taylor_Project 1/index.html
@@ -7,7 +7,12 @@
 <header>
     3 Years Old And Ruling The Roof!
 </header>
+
 <body>
+
+    <h1>
+        Can You Make It? ;]
+    </h1>
 
     <nav>
         <ul>
@@ -16,10 +21,6 @@
             <li><a href="#Bed_Time">Bed Time</a></li>
         </ul>
     </nav>
-
-    <h1>
-        Can You Make It? ;]
-    </h1>
 
     <section>
         <h2 id="Mornings">
@@ -62,9 +63,13 @@
             All the fighting stops when they sleep and you can see on their face the innocence in their hearts.
         </p>
 
-        <blockquote>
-            Yes, having a child is surely the most beautifully irrational act that two people in love can commit. ~Bill Cosby
-        </blockquote>
+        <aside>
+
+            <blockquote>
+                Yes, having a child is surely the most beautifully irrational act that two people in love can commit. ~Bill Cosby
+            </blockquote>
+
+        </aside>
     </section>
 
     <section>
@@ -78,7 +83,7 @@
             <a href="images/tvtime.jpg">
                 <img src="images/tvtimesmall.jpg" alt="Titan and Dani" />
             </a>
-            
+
             <figcaption>My daughter Dani and her kitten Titan.</figcaption>
 
         </figure>
@@ -105,14 +110,28 @@
 
         <figure>
 
-            <a href="images/">
-                <img scr="images/" alt="" />
+            <a href="images/ham.jpg">
+                <img src="images/hamsmall.jpg" alt="Silly child" />
             </a>
 
-            <figcaption></figcaption>
+            <figcaption>Silly child xD</figcaption>
 
         </figure>
+
+        <figure>
+
+            <a href="images/sleep.jpg">
+                <img src="images/sleepsmall.jpg" alt="sleeping away" />
+            </a>
+
+            <figcaption>So Tired</figcaption>
+
+        </figure>
+
     </section>
 
 </body>
+
+<footer>Thanks for coming by!</footer>
+
 </html>
