--- a/Broome_Taylor_Project 1/index.html
+++ b/Broome_Taylor_Project 1/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles/style.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <title>Living With A 3 Year Old</title>
 </head>
-<header>
-    3 Years Old And Ruling The Roof!
-</header>
 
 <body>
+
+    <header>
+        3 Years Old And Ruling The Roof!
+    </header>
 
     <h1>
         Can You Make It? ;]
     </h1>
 
     <nav>
-        <ul>
-            <li><a href="#Gallery">Gallery</a></li>
-            <li><a href="#Mornings">Mornings</a></li>
-            <li><a href="#Bed_Time">Bed Time</a></li>
-        </ul>
+        <a href="#Gallery">Gallery</a>
+        <a href="#Mornings">Mornings</a>
+        <a href="#Bed_Time">Bed Time</a>
     </nav>
 
     <section>
@@ -39,7 +39,7 @@
             My morning to-do list:
         </h3>
 
-        <ol>
+        <ol id="WakeUp">
             <li>Wake up 4 times from 5 am to 7 am only to drag yourself out of bed thanks to a very lively tiny creature.</li>
             <li>Drag yourself into the kitchen to make coffee while said creature hangs on your legs.</li>
             <li>After thoroughly drowning your body with caffeine prepare breakfast of cereal or donuts.</li>
@@ -72,7 +72,7 @@
         </aside>
     </section>
 
-    <section>
+    <section id="images">
 
         <h3 id="Gallery">
             Image Gallery
