--- a/Broome_Taylor_Project 3/index.html
+++ b/Broome_Taylor_Project 3/index.html
@@ -9,20 +9,19 @@
 <body>
     <div class="header">
         <header>
-            3 Years Old And Ruling The Roof!
+            3 Years Old And Ruling The Roost!
+            <nav>
+                <a href="#Gallery">Gallery</a>
+                <a href="#Mornings">Mornings</a>
+                <a href="#Bed_Time">Bed Time</a>
+            </nav>
         </header>
 
         <h1>
             Can You Make It? ;]
         </h1>
 
-        <nav>
-            <a href="#Gallery">Gallery</a>
-            <a href="#Mornings">Mornings</a>
-            <a href="#Bed_Time">Bed Time</a>
-        </nav>
     </div>
-
 
     <div class="Main">
 
@@ -52,6 +51,32 @@
                 <li>Afterward you will fight them into clothing (and/or) a diaper.</li>
                 <li>You will then spend the rest of the morning trying to get them to understand that clothing is a necessary thing and not optional in public.</li>
             </ol>
+
+            <table>
+                    <thead>
+                        Foods She will eat:
+                    </thead>
+                    <tr>
+                        <th scope="col"> Food</th>
+                        <th scope="col">Yes</th>
+                        <th scope="col">No</th>
+                    </tr>
+                    <tr class="even">
+                        <th scope="row">Oatmeal</th>
+                        <td> &#10007</td>
+                        <td> &#10004</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Toast</th>
+                        <td>&#10004</td>
+                        <td>&#10007</td>
+                    </tr>
+                    <tr class="even">
+                        <th scope="row">Cereal</th>
+                        <td>&#10004</td>
+                        <td>&#10007</td>
+                    </tr>
+            </table>
         </section>
 
         <section>
@@ -77,6 +102,45 @@
 
         </aside>
 
+        <section>
+            <h3>Tell us about yourself:</h3>
+
+            <form>
+
+                <lable>
+                    Your Name:
+                    <input type="text" name="name" size="15" maxlength="30" required="required">
+                </lable>
+                <br/>
+                <lable>I have a girl
+                    <input type="checkbox" name="Kids" value="Girl">
+                </lable>
+                <br>
+                <lable>I have a boy
+                    <input type="checkbox" name="Kids" value="BOY" >
+                </lable>
+                <br/>
+                <lable>Where are you from?
+                    <select required="required">
+                        <option value ="USA">USA</option>
+                        <option value ="China">China</option>
+                        <option value ="Europe">Europe</option>
+                        <option value ="Africa">Africa</option>
+                    </select>
+                </lable>
+                <br/>
+                <lable>Enter your email to get weekly updates!
+                    <input type="email" name="email">
+                </lable>
+                <br/>
+                <lable>What is your favorite thing your kids have done?
+                    <textarea name="Tell Us:" cols="10" rows="1">text here:</textarea>
+                </lable>
+                <br/>
+                <input type="submit">
+
+            </form>
+        </section>
     </div>
 
     <div class="photos">
